cart quntity manipulation bug fixed

--- a/views/admin/coupon-list.ejs
+++ b/views/admin/coupon-list.ejs
@@ -71,8 +71,8 @@
               <%= formattedDate %>
           </td>
             <td class="border-t-0 px-2 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap py-3">
-              <i class="mr-4"></i>
-               Del
+              <!-- <a href="/admin/deleteCoupon/ <%= coup.id %>"> Delete</a> -->
+              Delete
             </td>
           </tr>
         <% }) %>
