--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -39,7 +39,7 @@
                     <div class="flex justify-between mb-6">
                         <div>
                             <div class="flex items-center mb-1">
-                                <div class="text-2xl font-semibold"><%= list[0] %></div>
+                                <div class="text-2xl font-semibold text-green-600"><%= list[0] %></div>
                             </div>
                             <div class="text-sm font-medium text-gray-400">Users</div>
                         </div>
@@ -50,7 +50,7 @@
                     <div class="flex justify-between mb-4">
                         <div>
                             <div class="flex items-center mb-1">
-                                <div class="text-2xl font-semibold"><%= list[1] %></div>                 </div>
+                                <div class="text-2xl font-semibold text-blue-600"><%= list[1] %></div>                 </div>
                             <div class="text-sm font-medium text-gray-400">Brands</div>
                         </div>
                     </div>
@@ -59,7 +59,7 @@
                 <div class="bg-white rounded-md border border-gray-100 p-6 shadow-md shadow-black/5">
                     <div class="flex justify-between mb-6">
                         <div>
-                            <div class="text-2xl font-semibold mb-1"><%= list[2] %></div>
+                            <div class="text-2xl font-semibold mb-1 text-red-600"><%= list[2] %></div>
                             <div class="text-sm font-medium text-gray-400">Categories</div>
                         </div>
                     </div>
@@ -109,6 +109,8 @@
   </div>
 </section>
 
+
+<!-- 
 <section class="py-1 bg-blueGray-50 ">
   <h1 class="font-bold text-2xl">Top Sellers</h1>
   <div class="w-full mb-12 xl:mb-0 px-2 mt-5">
@@ -161,17 +163,7 @@
               <td class="border-t-0 align-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
                   <a href="./category-block/" class="font-medium text-red-950  hover:underline">
                      
-                          <span class="relative flex h-3 w-3">
-                              <span class="absolute inline-flex h-full rounded-full bg-blue-400 opacity-75"> </span>
-                              <span class="relative inline-flex rounded-full h-3 w-3 bg-green-500 pl-3">Block</span>
-                            </span>
-                     
-  
-                          <span class="relative flex h-3 w-3">
-                              <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-blue-400 opacity-75"> </span>
-                              <span class="relative inline-flex rounded-full h-3 w-3 bg-red-500 pl-3">Unblock</span>
-                            </span>
-                    
+                      
               </td>
          
             </tr>
@@ -182,7 +174,7 @@
         <section class="mb-14 mt-10">
           <a href="./category-add" type="submit" class="flex w-32 rounded-md bg-pink-500 px-3 py-1.5 text-sm font-semibold leading-6 text-gray-700 shadow-sm hover:bg-yellow-500 hover:text-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add Category</a>
   
-      </section>
+      </section> -->
       </div>
     </div>
   </div>
