--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -82,6 +82,37 @@
       }
     </style>
     
+    <style>
+      #toast-container > .toast-warning {
+        background: linear-gradient(to right, #d8ff2d, #3a3b3f 70% ) !important;
+        width: 350px;
+        height: 70px;
+        position: relative;
+        color: white; 
+        text-align: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+      }
+      
+      #toast-container > .toast-warning::after {
+        content: ""; 
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 4px; 
+        background-color: rgb(208, 255, 0); 
+        transform: scaleX(0); 
+        transform-origin: right; 
+        animation: expandLine 5s linear forwards; 
+      }
+    
+      @keyframes expandLine {
+        to {
+          transform: scaleX(1); 
+        }
+      }
+    </style>
+    
     <script>
 import {
   Dropdown,
