complete validation for category add

--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -70,12 +70,12 @@
                             <% if (product.deleted == false) { %>
                                 <span class="relative flex h-3 w-3">
                                     <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-blue-400 opacity-75"> </span>
-                                    <span class="relative inline-flex rounded-full h-3 w-3 bg-green-500 pl-3">Block</span>
+                                    <span class="relative inline-flex rounded-full h-3 w-3 bg-green-500 pl-3">List</span>
                                   </span>
                             <% } else { %>
                                 <span class="relative flex h-3 w-3">
                                     <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-blue-400 opacity-75"> </span>
-                                    <span class="relative inline-flex rounded-full h-3 w-3 bg-red-500 pl-3">Unblock</span>
+                                    <span class="relative inline-flex rounded-full h-3 w-3 bg-red-500 pl-3">Unlist</span>
                                   </span>
                             <% } %>    
                         </td>
