--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -29,63 +29,42 @@
  <!----------- toaster css ------------->
     <style>
       #toast-container > .toast-error {
-        background: linear-gradient(to right, #e92d0ce3, #22242F 50% ) !important;
-        width: 350px;
-        height: 70px;
-        position: relative;
-        color: white; 
-        text-align: center;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        background: linear-gradient(to right, #e92d0ce3, #22242F 50% ) !important; width: 350px; height: 70px; position: relative; color: white;  text-align: center; font-family: Verdana, Geneva, Tahoma, sans-serif;
       }
-      
-      #toast-container > .toast-error::after {
-        content: ""; 
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 4px; 
-        background-color: rgb(255, 0, 0); 
-        transform: scaleX(0); 
-        transform-origin: right; 
-        animation: expandLine 5s linear forwards; 
+      #toast-container > .toast-error::after { 
+        content: "";  position: absolute; bottom: 0; left: 0; width: 100%; height: 4px;  background-color: rgb(255, 0, 0);  transform: scaleX(0);  transform-origin: right;  animation: expandLine 5s linear forwards; 
       }
-    
       @keyframes expandLine {
         to {
-          transform: scaleX(1); 
-        }
+          transform: scaleX(1)}
       }
     </style>
     
+     <!----------- toaster success ------------->
     <style>
-      #toast-container > .toast-success {
-        background: linear-gradient(to right, #1fe90ce3, #22242F 50% ) !important;
-        width: 350px;
-        height: 70px;
-        position: relative;
-        color: white; 
-        text-align: center;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
+      #toast-container > .toast-success { 
+        background: linear-gradient(to right, #1fe90ce3, #22242F 50% ) !important; width: 350px; height: 70px; position: relative; color: white;  text-align: center; font-family: Verdana, Geneva, Tahoma, sans-serif;
       }
-      
-      #toast-container > .toast-success::after {
-        content: ""; 
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 4px; 
-        background-color: rgb(0, 255, 55); 
-        transform: scaleX(0); 
-        transform-origin: right; 
-        animation: expandLine 5s linear forwards; 
+      #toast-container > .toast-success::after { 
+        content: "";  position: absolute; bottom: 0; left: 0; width: 100%; height: 4px;  background-color: rgb(0, 255, 55);  transform: scaleX(0);  transform-origin: right;  animation: expandLine 5s linear forwards; 
       }
-    
       @keyframes expandLine {
         to {
-          transform: scaleX(1); 
-        }
+          transform: scaleX(1)}
+      }
+    </style>
+
+ <!----------- toaster warning ------------->
+    <style>
+      #toast-container > .toast-warning {
+        background: linear-gradient(to right, #d8ff2d, #3a3b3f 70% ) !important; width: 350px; height: 70px; position: relative; color: white;  text-align: center; font-family: Verdana, Geneva, Tahoma, sans-serif;
+      }
+      #toast-container > .toast-warning::after {
+        content: ""; position: absolute; bottom: 0;left: 0;width: 100%; height: 4px;background-color: rgb(208, 255, 0); transform: scaleX(0); transform-origin: right; animation: expandLine 5s linear forwards; 
+      }
+      @keyframes expandLine {
+        to {
+          transform: scaleX(1)}
       }
     </style>
     
