complete category validation

--- a/views/admin/category-list.ejs
+++ b/views/admin/category-list.ejs
@@ -8,7 +8,7 @@
 <main>
 
 
-<section class="py-1 bg-blueGray-50 ">
+<section class="py-1 bg-blueGray-50 w-4/5">
 <div class="w-full mb-12 xl:mb-0 px-2 mt-16">
   <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded ">
     <div class="rounded-t mb-0 px-4 border-0">
@@ -61,13 +61,13 @@
                     <% if (category.deleted == false) { %>
                         <span class="relative flex h-3 w-3">
                             <span class="absolute inline-flex h-full rounded-full bg-blue-400 opacity-75"> </span>
-                            <span class="relative inline-flex rounded-full h-3 w-3 bg-green-500 pl-3">Block</span>
+                            <span class="relative inline-flex rounded-full h-3 w-3 bg-green-500 pl-3">List</span>
                           </span>
                     <% } else { %>
 
                         <span class="relative flex h-3 w-3">
                             <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-blue-400 opacity-75"> </span>
-                            <span class="relative inline-flex rounded-full h-3 w-3 bg-red-500 pl-3">Unblock</span>
+                            <span class="relative inline-flex rounded-full h-3 w-3 bg-red-500 pl-3">Unlist</span>
                           </span>
                     <% } %>    
             </td>
