--- a/views/admin/category-edit.ejs
+++ b/views/admin/category-edit.ejs
@@ -20,6 +20,9 @@
                               <label for="categoryName"> Category Name </label>
                               <input type="text" name="categoryName" id="categoryName" class="h-8 border mt-1 rounded px-4 w-full  border-gray-400" value="<%= categories.categoryName %>" />
                             </div>
+                            <div class="md:col-span-5 hidden">
+                              <input type="text" name="realCategoryName" id="realCategoryName" class="h-8 border mt-1 rounded px-4 w-full  border-gray-400" value="<%= categories.categoryName %>"/>
+                            </div>
                             <div class="md:col-span-5">
                               <label for="description">Description </label>
                               <textarea type="text" name="description" id="description" autocomplete="given-name" class="block w-56 h-28 border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"> <%= categories.description %></textarea>
