--- a/views/admin/product-add.ejs
+++ b/views/admin/product-add.ejs
@@ -1,84 +1,86 @@
 <%- include('../partials/adminHeader') %>
 
 <main>
-    <form method="post" enctype="multipart/form-data">
-        <div class="space-y-12 p-20 flex">
-          <div class="border-b border-gray-900/10 pb-12">
-            <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-              <div class="sm:col-span-3">
-                <label for="prodcutName" class="block text-sm font-medium leading-6 text-gray-900">Product name</label>
-                <div class="mt-2">
-                  <input type="text" name="productName" id="prodcutName" autocomplete="given-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                </div>
-              </div>
-              <div class="sm:col-span-3">
-                <label for="productImage" class="block text-sm font-medium leading-6 text-gray-900">Product Image</label>
-                <div class="mt-2">
-                  <input type="file" name="productImage" id="productImage" accept="image/*" multiple autocomplete="family-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" onchange="previewImages(event)">
-                  <div id="imagePreview" class="mt-2"></div>
-                </div>
-              </div>
-      
-              <div class="sm:col-span-3">
-                <label for="category" class="block text-sm font-medium leading-6 text-gray-900">Category</label>
-                <div class="mt-2">
-                  <select id="category" name="category" autocomplete="category-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
-                  <% categories.forEach(category => { %>
-                    <option class="text-gray-900"><%= category.categoryName %></option>
-                    <% }) %>
-                  </select>
-                </div>
-              </div>
 
-      
-              <div class="sm:col-span-4">
-                <label for="description" class="block text-sm font-medium leading-6 text-gray-900">Description</label>
-                <div class="mt-2">
-                  <input id="description" name="description" type="text" autocomplete="description" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                </div>
-              </div>
-              <div class="sm:col-span-4">
-                <label for="brand" class="block text-sm font-medium leading-6 text-gray-900">Brand</label>
-                <div class="mt-2">
-                  <input id="brand" name="brand" type="text" autocomplete="description" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                </div>
-              </div>
-              <div class="sm:col-span-4">
-                <label for="color" class="block text-sm font-medium leading-6 text-gray-900">Color</label>
-                <div class="mt-2">
-                  <input id="color" name="color" type="text" autocomplete="color" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                </div>
-              </div>
-              <div class="sm:col-span-4">
-                <label for="price" class="block text-sm font-medium leading-6 text-gray-900">Price</label>
-                <div class="mt-2">
-                  <input id="price" name="price" type="number" autocomplete="price" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                </div>
-              </div>
-              <div class="sm:col-span-4">
-                <label for="size" class="block text-sm font-medium leading-6 text-gray-900">Size</label>
-                <div class="mt-2">
-                  <input id="size" name="size" type="number" autocomplete="size" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                </div>
-              </div>
-              <div class="sm:col-span-4">
-                <label for="stock" class="block text-sm font-medium leading-6 text-gray-900">Stock</label>
-                <div class="mt-2">
-                  <input id="stock" name="stock" type="number" autocomplete="stock" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                </div>
-              </div>
+      <section>
+        <form  method="post" enctype="multipart/form-data"> 
+            <div class="min-h-screen bg-gray-100 flex items-start justify-start pl-24 pt-20">
+                <div class="w-auto">
+                  <div>
+                    <h2 class="font-semibold text-xl text-gray-600 hover:text-sky-400"></h2>
+                    <div class="bg-white rounded shadow-lg p-4 px-4 md:p-8 mb-6">
+                      <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 lg:grid-cols-3">
+                        <div class="text-gray-600">
+                          <p class="font-bold text-xl text-gray-900 hover:text-sky-500">Product</p>
+                        </div>
+                        <div class="lg:col-span-2">
+                          <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 md:grid-cols-5">
 
-        </div>
-        <button type="submit" class="mt-5 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-            Add Product
-        </button>
-        </div>
-        </div>
-      </form>
+                            <div class="md:col-span-5">
+                              <label for="productName"> Product Name </label>
+                              <input type="text" name="productName" id="productName" class="h-8 border mt-1 rounded px-4 w-full  border-gray-400"/>
+                            </div>
+                            <div class="md:col-span-5">
+                              <label for="productImage"> Product Image </label>
+                              <input type="file" name="productImage" id="productImage" class="h-8 border mt-1 rounded px-4 w-full  border-gray-400"/>
+                              <div id="imagePreview" class="mt-2"></div>
+                            </div>
+
+                            <div class="md:col-span-5">
+                              <label for="categoryName"> Category Name </label>
+                              <div class="mt-2">
+                                <select id="category" name="category" autocomplete="category-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
+                                <% categories.forEach(category => { %>
+                                  <option class="text-gray-900"><%= category.categoryName %></option>
+                                  <% }) %>
+                                </select>
+                              </div>                            </div>
+
+                            <div class="md:col-span-5">
+                              <label for="description">Description </label>
+                              <textarea type="text" name="description" id="description" autocomplete="given-name" class="block w-56 h-28 border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                            </div>
+
+                            <div class="md:col-span-5">
+                                <label for="brand"> Brand Name </label>
+                                <input type="text" name="brand" id="brand" class="h-8 border mt-1 rounded px-4 w-full  border-gray-400"/>
+                              </div>
+                            <div class="md:col-span-5">
+                                <label for="color"> Product Color </label>
+                                <input type="text" name="color" id="color" class="h-8 border mt-1 rounded px-4 w-full  border-gray-400"/>
+                              </div>
+                            <div class="md:col-span-5">
+                                <label for="price"> Product Price </label>
+                                <input type="number" name="price" id="price" class="h-8 border mt-1 rounded px-4 w-full  border-gray-400"/>
+                              </div>
+                            <div class="md:col-span-5">
+                                <label for="size"> Product Size </label>
+                                <input type="number" name="size" id="size" class="h-8 border mt-1 rounded px-4 w-full  border-gray-400"/>
+                              </div>
+                            <div class="md:col-span-5">
+                                <label for="stock"> Product Stock </label>
+                                <input type="number" name="stock" id="size" class="h-8 border mt-1 rounded px-4 w-full  border-gray-400"/>
+                              </div>
+                            <div class="md:col-span-5 text-right mt-5">
+                              <div class="inline-flex items-end">
+                                <button type="submit" class="bg-cyan-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded">Submit</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
+    
+    </section>
   </main>
 
 <script src="https://unpkg.com/@popperjs/core@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 <script>
   function parseQueryParams() {
       var queryParams = {};
@@ -100,41 +102,10 @@
               toastr.success(message);
           } else if (type === 'error') {
               toastr.error(message);
+          }else if(type === 'warning'){
+            toastr.warning(message)
           }
       }
   });
 </script>
- 
-<script>
-    function previewImages(event) {
-      const previewContainer = document.getElementById('imagePreview');
-      previewContainer.innerHTML = '';
-  
-      const files = event.target.files;
-      if (files) {
-        for (let i = 0; i < files.length; i++) {
-          const file = files[i];
-          const reader = new FileReader();
-  
-          reader.onload = function (e) {
-            const image = document.createElement('img');
-            const closeButton = document.createElement('button');
-            closeButton.innerHTML = 'Remove';
-            closeButton.classList.add('text-red-500', 'hover:text-red-700', 'cursor-pointer', 'ml-2');
-            closeButton.addEventListener('click', function () {
-              previewContainer.removeChild(image);
-              previewContainer.removeChild(closeButton);
-            });
-  
-            image.src = e.target.result;
-            image.classList.add('w-20', 'h-20', 'object-cover', 'rounded-md', 'mr-2', 'mb-2');
-            previewContainer.appendChild(image);
-            previewContainer.appendChild(closeButton);
-          };
-  
-          reader.readAsDataURL(file);
-        }
-      }
-    }
-  </script>
 <%- include('../partials/adminFooter') %>
