--- a/views/admin/category-add.ejs
+++ b/views/admin/category-add.ejs
@@ -11,17 +11,17 @@
                     <div class="bg-white rounded shadow-lg p-4 px-4 md:p-8 mb-6">
                       <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 lg:grid-cols-3">
                         <div class="text-gray-600">
-                          <p class="font-medium text-lg">Category</p>
+                          <p class="font-medium text-gray-900 hover:text-sky-600 text-lg">Category</p>
                         </div>
                         <div class="lg:col-span-2">
                           <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 md:grid-cols-5">
 
                             <div class="md:col-span-5">
-                              <label for="categoryName"> Category Name </label>
+                              <label for="categoryName" class="font-bold"> Category Name </label>
                               <input type="text" name="categoryName" id="categoryName" class="h-8 border mt-1 rounded px-4 w-full  border-gray-400"/>
                             </div>
                             <div class="md:col-span-5">
-                              <label for="description">Description </label>
+                              <label for="description" class="font-bold">Description </label>
                               <textarea type="text" name="description" id="description" autocomplete="given-name" class="block w-56 h-28 border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
                             </div>
                             <div class="md:col-span-5 text-right mt-5">
