--- a/views/admin/coupon-list.ejs
+++ b/views/admin/coupon-list.ejs
@@ -90,5 +90,32 @@
 
 </main>
 
+<script>
+  function parseQueryParams() {
+      var queryParams = {};
+      var queryString = window.location.search.substring(1);
+      var params = queryString.split("&");
+      for (var i = 0; i < params.length; i++) {
+          var pair = params[i].split("=");
+          queryParams[decodeURIComponent(pair[0])] = decodeURIComponent(pair[1]);
+      }
+      return queryParams;
+  }
+
+  document.addEventListener('DOMContentLoaded', function() {
+      var queryParams = parseQueryParams();
+      var message = queryParams['message'];
+      var type = queryParams['type'];
+      if (message) {
+          if (type === 'success') {
+              toastr.success(message);
+          } else if (type === 'error') {
+              toastr.error(message);
+          }else if(type === 'warning'){
+            toastr.warning(message)
+          }
+      }
+  });
+</script>
 
 <%- include('../partials/adminFooter') %>
