checkout redirect only cart has product

--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -126,6 +126,10 @@
         const td = e.target.closest('td');
         const select = td.querySelector('select');
         const orderStatus = select.value;
+
+        if(orderStatus == "Cancelled"){
+          
+        }
         const orderId = td.querySelector('#orderId').getAttribute('value');
 
         fetch('/admin/orderStatus',{
