--- a/views/user/orderFailed.ejs
+++ b/views/user/orderFailed.ejs
@@ -27,7 +27,7 @@
 
 <div class="flex justify-center m-5">
     <button id="successButton" data-modal-target="successModal" data-modal-toggle="successModal" class=" text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800" type="button">
-    Show success message
+    Show Failed message
     </button>
 </div>
 
@@ -42,15 +42,16 @@
             </button>
             <div class="w-12 h-12 rounded-full bg-green-100 dark:bg-green-600 p-2 flex items-center justify-center mx-auto mb-3.5">
                 <svg aria-hidden="true" class="w-8 h-8 text-green-500 dark:text-green-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-                <span class="sr-only">Success</span>
+                <span class="sr-only">Failed</span>
             </div>
-            <p class="mb-4 text-lg font-semibold text-gray-900 dark:text-white">Order Created Successfully</p>
+            <p class="mb-4 text-lg font-semibold text-gray-900 dark:text-white">Failed To Create Order</p>
             <a href="/orderHistory" data-modal-toggle="successModal" type="a href="/orderHistory"" class="font-bold py-2 px-3 text-sm font-medium text-center text-white rounded-lg bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:focus:ring-primary-900">
                 Order Histroy
             </a>
         </div>
     </div>
 </div>
+
 </main>
 
 
