--- a/views/user/orderFailed.ejs
+++ b/views/user/orderFailed.ejs
@@ -45,7 +45,7 @@
                 <span class="sr-only">Failed</span>
             </div>
             <p class="mb-4 text-lg font-semibold text-gray-900 dark:text-white">Failed To Create Order</p>
-            <a href="/orderHistory" data-modal-toggle="successModal" type="a href="/orderHistory"" class="font-bold py-2 px-3 text-sm font-medium text-center text-white rounded-lg bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:focus:ring-primary-900">
+            <a href="/sortOrdersUser/olderOrders" data-modal-toggle="successModal"  class="py-2 px-3 text-sm font-medium text-center text-white rounded-lg bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:focus:ring-primary-900">
                 Order Histroy
             </a>
         </div>
